@@ -5,6 +5,10 @@ Changes for crash
 Unreleased
 ==========
 
+ - Do not show connect message on startup by default but only when starting
+   crash in verbose mode. This prevents the programme from printing the message
+   to stdout when using the command mode or executing ``--sysinfo``.
+
  - Added support for pasting and executing multiple statements at once.
 
 2017/10/11 0.22.2
